deployments/helm/developer-profiles/dev-profile-lvs/vss-ingress-example.yaml
# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: <RELEASE_NAME>-vss-ingress
  namespace: <NAMESPACE>
spec:
  ingressClassName: haproxy
  rules:
  - host: vss.<EXTERNAL_HOST>.nip.io # e.g. vss.10.57.209.221.nip.io, Value of global.externalHost in values-lvs.yaml
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-vss-ui
            port:
              number: 3000
        path: /api/chat
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent
            port:
              number: 8000
        path: /chat
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent
            port:
              number: 8000
        path: /websocket
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent
            port:
              number: 8000
        path: /static
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vst-ingress-dev
            port:
              number: 30888
        path: /vst
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-ui
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-behavior-analytics-alerts
            port:
              number: 8080
        path: /behavior-analytics
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-perception-sdr-alerts
            port:
              number: 4001
        path: /perception-sdr
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-va-mcp
            port:
              number: 9901
        path: /va-mcp
        pathType: Prefix
  - host: streamer.vss.<EXTERNAL_HOST>.nip.io # e.g. streamer.vss.10.57.209.221.nip.io
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-nvstreamer-alerts
            port:
              number: 31000
        path: /
        pathType: Prefix
  - host: kibana.vss.<EXTERNAL_HOST>.nip.io # e.g. kibana.vss.10.57.209.221.nip.io, Value of global.kibanaPublicUrl in values-lvs.yaml
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-kibana
            port:
              number: 5601
        path: /
        pathType: Prefix
